# OpenDGLab-Desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tags.yml
res/: OpenDGLab-Desktop.icns  image.qrc
src/: autoRemoteProtocolPinger.cpp  autoRemoteProtocolPinger.h  autoWaveChangerThread.cpp  autoWaveChangerThread.h  bleConnectThread.cpp  bleConnectThread.h  deviceItem.cpp  deviceItem.h  deviceItem.ui  deviceOperator.cpp  deviceOperator.h  deviceOperator.ui  deviceStateEnum.h  dglabDevice.cpp  dglabDevice.h  global.cpp  global.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainWindowController.cpp  mainWindowController.h  remote.cpp  remote.h  remoteClient.cpp  remoteClient.h  remoteControl.cpp  remoteControl.h  remoteControl.ui  scanDevice.cpp  scanDevice.h  scanDevice.ui  scanDeviceController.cpp  scanDeviceController.h  waveSenderTimerThread.cpp  waveSenderTimerThread.h
